getInTouch feature added

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -19,60 +19,60 @@
   <div class="row main">
     <h3 class="center-align">Dashboard</h3>
     <div class="row">
-        <div class='col s12 m3'>
-            <ul class="collapsible popout">
-              <li>
-                <div class="collapsible-header">Users</div>
-                <div class="collapsible-body">
-                  <div class="clickMe" data-url="/user/signup">Add User</div>
-                  <div class="clickMe" data-url="/user/delete">Delete User</div>
-                  
-                </div>
-              </li>
-              <li>
-                <div class="collapsible-header">Products</div>
-                <div class="collapsible-body">
-                  <div class="clickMe" data-url="/add/products">Add Product</div>
-                </div>
-              </li>
-              <li>
-                <div class="collapsible-header">Recipes</div>
-                <div class="collapsible-body">
-                  <div class="clickMe" data-url="/add/recipe">Add Recipes</div>
-                </div>
-              </li>
-              <li>
-                <div class="collapsible-header">Instructions</div>
-                <div class="collapsible-body">
-                  <div class="clickMe" data-url="/add/instruction">Add Instructions</div>
-                </div>
-              </li>
-              <li>
-                 <div class="collapsible-header">Profile</div>
-                <div class="collapsible-body">
-                  <div class="clickMe" data-url="/user/changeInfo">Update</div>
-                  <div class="clickMe " data-url="#" id="logout" >Logout</div>
-                </div>
-              </li>
-            </ul>
-            <div class="btn distributor-requests" style="width: 100%;padding: 0px;">
-              Distributor's Request
+      <div class='col s12 m3'>
+        <ul class="collapsible popout">
+          <li>
+            <div class="collapsible-header">Users</div>
+            <div class="collapsible-body">
+              <div class="clickMe" data-url="/user/signup">Add User</div>
+              <div class="clickMe" data-url="/user/delete">Delete User</div>
+
             </div>
-          </div>
-          
-          <div class="col s12 m9">
-            <div class="row">
-              <div class="col s12" id="products-row">
-                <!-- <h3>Products</h3> -->
-              </div>
-              <div class="col s12" id="recipes-row">
-                <!-- <h3>Recipes</h3> -->
-              </div>
-              <div class="col s12" id="instructions-row">
-                <!-- <h3>Instructions</h3> -->
-              </div>
+          </li>
+          <li>
+            <div class="collapsible-header">Products</div>
+            <div class="collapsible-body">
+              <div class="clickMe" data-url="/add/products">Add Product</div>
             </div>
+          </li>
+          <li>
+            <div class="collapsible-header">Recipes</div>
+            <div class="collapsible-body">
+              <div class="clickMe" data-url="/add/recipe">Add Recipes</div>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">Instructions</div>
+            <div class="collapsible-body">
+              <div class="clickMe" data-url="/add/instruction">Add Instructions</div>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">Profile</div>
+            <div class="collapsible-body">
+              <div class="clickMe" data-url="/user/changeInfo">Update</div>
+              <div class="clickMe " data-url="#" id="logout">Logout</div>
+            </div>
+          </li>
+        </ul>
+        <div class="btn distributor-requests" style="width: 100%;padding: 0px;">
+          Contact Requests
+        </div>
+      </div>
+
+      <div class="col s12 m9">
+        <div class="row">
+          <div class="col s12" id="products-row">
+            <!-- <h3>Products</h3> -->
           </div>
+          <div class="col s12" id="recipes-row">
+            <!-- <h3>Recipes</h3> -->
+          </div>
+          <div class="col s12" id="instructions-row">
+            <!-- <h3>Instructions</h3> -->
+          </div>
+        </div>
+      </div>
     </div>
     <div class="info"></div>
   </div>
