--- a/views/delispices/contact.ejs
+++ b/views/delispices/contact.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <% include includes/externel.ejs %>
   <!-- Main Stylesheet File -->
@@ -7,247 +8,251 @@
 
 
 </head>
+
 <body><br><br><br>
 
-	<!--____________________________NAV_____________________________ -->
-   <% include includes/header.ejs %>
-   <!-- #nav --> 
- 
+  <!--____________________________NAV_____________________________ -->
+  <% include includes/header.ejs %>
+  <!-- #nav -->
+
   <!--_____________________Contact us_______________________-->
-  
-<section id="contactusfull">
-  <div class="col-12" id="contact-form">
-    <br>
-    <h4> Get in Touch with us</h4>
-   
 
-    <form>
+  <section id="contactusfull">
+    <div class="col-12" id="contact-form">
+      <br>
+      <h4> Get in Touch with us</h4>
+
+
+      <form class="getInTouch">
         <div class="row">
-            <div class="col-3">
-              <input type="text" id="tf1" class="form-control" placeholder="Title">
-            </div>
-
-            <div class="col-3">
-                <input type="text" id="tf2" class="form-control" placeholder="First Name">
-              </div>
-
-              <div class="col-3">
-                  <input type="text" id="tf3" class="form-control" placeholder="Last Name">
-                </div>  
+          <div class="col-3">
+            <input type="text" id="tf1" class="form-control" placeholder="Title">
           </div>
-            <br>
-          <div class="row">
-              <div class="col-3">
-                <input type="text" id="tf4" class="form-control" placeholder="Company">
-              </div>
-  
-              <div class="col-3">
-                  <input type="text" id="tf5" class="form-control" placeholder="Designation">
-                </div>
-  
-                <div class="col-3">
-                    <input type="text" id="tf6" class="form-control" placeholder="Mobile">
-                  </div>  
-            </div>
-              <br>
-            <div class="row">
-                <div class="col-3">
-                  <input type="text" id="tf7" class="form-control" placeholder="Type Of Business">
-                </div>
-    
-                <div class="col-3">
-                    <input type="text" id="tf8" class="form-control" placeholder="Address">
-                  </div>
-    
-                  <div class="col-3">
-                      <input type="text" id="tf9" class="form-control" placeholder="Country">
-                    </div>  
-              </div>
-              <br>
-              <div class="row">
-                  <div class="col-12">
-                      <textarea class="input1" id="tf10" rows="3" cols="97" placeholder="Your Message"></textarea>
-                  </div>
-      
-                </div>
-                <br>  
-                <div class="row">
-                <div class="col-6">
-                    <button type="submit" class="btn btn-primary">Send Message</input>
-                  </div>
-                </div>
 
-
-    </form>
-    <br>
-    <br>
-    <h3>We Specialize in Customizations, Special Recipies & Private Label Projects</h3>
-<br>
-  </div>
-    
-
-
-
-
-  
-
-  <main id="main">
-  
-      <section id="contact" class="section-bg wow fadeInUp">
-          <div class="container">
-    
-            
-    
-            <div class="row contact-info">
-    
-              <div class="col-md-4">
-                <div class="contact-address">
-                  
-                  <h3>Address</h3>
-                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.9507319575164!2d72.84334981450704!3d19.15363378704348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b65aa3f13103%3A0x32134c26c6031956!2sNAMOSRI+VENTURES+PRIVATE+LIMITED!5e0!3m2!1sen!2sin!4v1527333339413" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-              </div>
-    
-              <div class="col-md-4">
-                <div class="contact-phone">
-               
-                  <h3>Join our community:</h3>
-                  <p>www.delispices.co.in
-                  www.facebook.com/delispices.in</p>
-                  <br>
-                  <h3>Contact Number</h3>
-                  <p><a href="tel:+91 22 4023 0273">+91 22 4023 0273</a></p>
-                  <p><a href="tel:+91 80494 408995">+91 80494 40899</a></p>
-                </div>
-              </div>
-    
-              <div class="col-md-4">
-                <div class="contact-email">
-                  
-                  <h3>For any feedback/ complaint, Drop an Email at :</h3>
-                  <p><a href="mailto:info@example.com">care@namosri.com</a></p>
-                  <br>
-              <h3>We Hire at DeliSpices.<br>For Careers Drop an Email at :</h3>
-              <p><a href="mailto:info@example.com">jobs.namosri@gmail.com</a></p>
-                </div>
-              </div>
-            </div>
+          <div class="col-3">
+            <input type="text" id="tf2" class="form-control" placeholder="First Name">
           </div>
-      </section>
-  </main>
 
-  <!-- ______________________________DISTRIBUTOR APPLICATION FORM__________________________-->
-
-  <div class="col-lg-12" id="distro-form">
-    <p>
-        If you are interested in becoming a distributor for Déli Spices products, please fill out this Application Form. 
-        This will be reviewed and we will contact you at the earliest to discuss your application.
-    </p>
-    <p>
-      All Fields are mandatory*
-    </p>
-    <h3>DéliSpices Distributor Form </h3>
-      <form class="distributorForm">
-          <div class="row">
-            <div class="col-6">
-              <input type="text" class="form-control" id="newtf1" placeholder="Name of the firm">
-            </div>
-            <div class="col-6">
-                <textarea class="input1" id="newtf2" rows="2" cols="63" placeholder="Brief background of the company" ></textarea>
-            </div>
-        
+          <div class="col-3">
+            <input type="text" id="tf3" class="form-control" placeholder="Last Name">
           </div>
-          <br>
-          <div class="row">
-              <div class="col-3">
-                <input type="text" class="form-control" id="newtf3" placeholder="Full Address of the Firm">
-              </div>
-              <div class="col-3">
-                  <input type="text" class="form-control" id="newtf4" placeholder="City/Town">
-              </div>
-              <div class="col-6">
-                  <textarea class="input1" rows="2" cols="63" id="newtf5" placeholder="Infrastructure (Storage Space, refrigeration facility, delivery vehicle etc.)Present:- " ></textarea>
-              </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-3">
-                  <input type="text" class="form-control" id="newtf6" placeholder="State">
-                </div>
-                <div class="col-3">
-                    <input type="number" class="form-control" id="newtf7" placeholder="Pin">
-                </div>
-                <div class="col-6">
-                    <textarea class="input1" rows="2" cols="63" id="newtf8" placeholder="Infrastructure Can Provide" ></textarea>
-                </div>
-              </div> 
-              <br>
-              <div class="row">
-                  <div class="col-3">
-                    <input type="tel" class="form-control" id="newtf9" placeholder="Telephone Number">
-                  </div>
-                  <div class="col-3">
-                      <input type="tel" class="form-control" id="newtf10" placeholder="Mobile Number">
-                  </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-3">
+            <input type="text" id="tf4" class="form-control" placeholder="Company">
+          </div>
 
-                  <div class="col-3">
-                      <input type="number" class="form-control" id="newtf11" placeholder="Fax No. ">
-                  </div>
+          <div class="col-3">
+            <input type="text" id="tf5" class="form-control" placeholder="Designation">
+          </div>
 
-                  <div class="col-3">
-                      <input type="email" class="form-control" id="newtf12" placeholder="Email ID">
-                  </div>
-                  
-                </div> 
-                  <br>
-                <div class="row">
-                    <div class="col-3">
-                      <input type="number" class="form-control"id="newtf13" placeholder="Year of Establishment">
-                    </div>
-                    <div class="col-3">
-                        <input type="text" class="form-control" id="newtf14" placeholder="Business Type">
-                    </div>
-  
-                    <div class="col-3">
-                        <input type="text" class="form-control" id="newtf15" placeholder="Annual Sales">
-                    </div>
-  
-                    <div class="col-3">
-                        <input type="text" class="form-control" id="newtf16" placeholder="Capacity to Invest">
-                    </div>
-                  </div> 
-                    <br>
-                  <div class="row">
-                      <div class="col-3">
-                        <input type="text" class="form-control" id="newtf17" placeholder="Proprietor/Key Person">
-                      </div>
-                      <div class="col-3">
-                          <input type="text" class="form-control" id="newtf18" placeholder="Name">
-                      </div>
-                      <div class="col-6">
-                          <textarea class="input1" rows="2" cols="63" id="newtf19" placeholder="Existing Manpower/Salesman" ></textarea>
-                      </div>
-                    </div>
-                      <br>
+          <div class="col-3">
+            <input type="text" id="tf6" class="form-control" placeholder="Mobile">
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-3">
+            <input type="text" id="tf7" class="form-control" placeholder="Type Of Business">
+          </div>
 
-                      <div class="row">
-                          <div class="col-3">
-                            <input type="number" class="form-control" id="newtf20" placeholder="Age">
-                          </div>
-                          <div class="col-3">
-                              <input type="text" class="form-control" id="newtf21" placeholder="Qualification">
-                          </div>
-                          <div class="col-6">
-                              <textarea class="input1" rows="3" cols="63" id="newtf22" placeholder="How do you Propose to market DeliSpices Products" ></textarea>
-                          </div>
-                        </div>
-                        <br>
-                          <button type="submit" class="btn btn-primary text-center">Submit Your Application</button>
-                        
+          <div class="col-3">
+            <input type="text" id="tf8" class="form-control" placeholder="Address">
+          </div>
+
+          <div class="col-3">
+            <input type="text" id="tf9" class="form-control" placeholder="Country">
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-12">
+            <textarea class="input1" id="tf10" rows="3" cols="97" placeholder="Your Message"></textarea>
+          </div>
+
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-6">
+            <button type="submit" class="btn btn-primary">Send Message</input>
+          </div>
+        </div>
+
+
       </form>
-      
+      <br>
+      <br>
+      <h3>We Specialize in Customizations, Special Recipies & Private Label Projects</h3>
+      <br>
+    </div>
+
+
+
+
+
+
+
+    <main id="main">
+
+      <section id="contact" class="section-bg wow fadeInUp">
+        <div class="container">
+
+
+
+          <div class="row contact-info">
+
+            <div class="col-md-4">
+              <div class="contact-address">
+
+                <h3>Address</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.9507319575164!2d72.84334981450704!3d19.15363378704348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b65aa3f13103%3A0x32134c26c6031956!2sNAMOSRI+VENTURES+PRIVATE+LIMITED!5e0!3m2!1sen!2sin!4v1527333339413"
+                  width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="contact-phone">
+
+                <h3>Join our community:</h3>
+                <p>www.delispices.co.in
+                  www.facebook.com/delispices.in</p>
+                <br>
+                <h3>Contact Number</h3>
+                <p><a href="tel:+91 22 4023 0273">+91 22 4023 0273</a></p>
+                <p><a href="tel:+91 80494 408995">+91 80494 40899</a></p>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="contact-email">
+
+                <h3>For any feedback/ complaint, Drop an Email at :</h3>
+                <p><a href="mailto:info@example.com">care@namosri.com</a></p>
+                <br>
+                <h3>We Hire at DeliSpices.<br>For Careers Drop an Email at :</h3>
+                <p><a href="mailto:info@example.com">jobs.namosri@gmail.com</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- ______________________________DISTRIBUTOR APPLICATION FORM__________________________-->
+
+    <div class="col-lg-12" id="distro-form">
+      <p>
+        If you are interested in becoming a distributor for Déli Spices products, please fill out this Application
+        Form.
+        This will be reviewed and we will contact you at the earliest to discuss your application.
+      </p>
+      <p>
+        All Fields are mandatory*
+      </p>
+      <h3>DéliSpices Distributor Form </h3>
+      <form class="distributorForm">
+        <div class="row">
+          <div class="col-6">
+            <input type="text" class="form-control" id="newtf1" placeholder="Name of the firm">
+          </div>
+          <div class="col-6">
+            <textarea class="input1" id="newtf2" rows="2" cols="63" placeholder="Brief background of the company"></textarea>
+          </div>
+
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-3">
+            <input type="text" class="form-control" id="newtf3" placeholder="Full Address of the Firm">
+          </div>
+          <div class="col-3">
+            <input type="text" class="form-control" id="newtf4" placeholder="City/Town">
+          </div>
+          <div class="col-6">
+            <textarea class="input1" rows="2" cols="63" id="newtf5" placeholder="Infrastructure (Storage Space, refrigeration facility, delivery vehicle etc.)Present:- "></textarea>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-3">
+            <input type="text" class="form-control" id="newtf6" placeholder="State">
+          </div>
+          <div class="col-3">
+            <input type="number" class="form-control" id="newtf7" placeholder="Pin">
+          </div>
+          <div class="col-6">
+            <textarea class="input1" rows="2" cols="63" id="newtf8" placeholder="Infrastructure Can Provide"></textarea>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-3">
+            <input type="tel" class="form-control" id="newtf9" placeholder="Telephone Number">
+          </div>
+          <div class="col-3">
+            <input type="tel" class="form-control" id="newtf10" placeholder="Mobile Number">
+          </div>
+
+          <div class="col-3">
+            <input type="number" class="form-control" id="newtf11" placeholder="Fax No. ">
+          </div>
+
+          <div class="col-3">
+            <input type="email" class="form-control" id="newtf12" placeholder="Email ID">
+          </div>
+
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-3">
+            <input type="number" class="form-control" id="newtf13" placeholder="Year of Establishment">
+          </div>
+          <div class="col-3">
+            <input type="text" class="form-control" id="newtf14" placeholder="Business Type">
+          </div>
+
+          <div class="col-3">
+            <input type="text" class="form-control" id="newtf15" placeholder="Annual Sales">
+          </div>
+
+          <div class="col-3">
+            <input type="text" class="form-control" id="newtf16" placeholder="Capacity to Invest">
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-3">
+            <input type="text" class="form-control" id="newtf17" placeholder="Proprietor/Key Person">
+          </div>
+          <div class="col-3">
+            <input type="text" class="form-control" id="newtf18" placeholder="Name">
+          </div>
+          <div class="col-6">
+            <textarea class="input1" rows="2" cols="63" id="newtf19" placeholder="Existing Manpower/Salesman"></textarea>
+          </div>
+        </div>
+        <br>
+
+        <div class="row">
+          <div class="col-3">
+            <input type="number" class="form-control" id="newtf20" placeholder="Age">
+          </div>
+          <div class="col-3">
+            <input type="text" class="form-control" id="newtf21" placeholder="Qualification">
+          </div>
+          <div class="col-6">
+            <textarea class="input1" rows="3" cols="63" id="newtf22" placeholder="How do you Propose to market DeliSpices Products"></textarea>
+          </div>
+        </div>
+        <br>
+        <button type="submit" class="btn btn-primary text-center">Submit Your Application</button>
+
+      </form>
+
       <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -257,7 +262,7 @@
               </button>
             </div>
             <div class="modal-body">
-              
+
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -266,15 +271,16 @@
           </div>
         </div>
       </div>
-</div>
+    </div>
 
-</section>
+  </section>
 
-    <footer id="footer">
-           <%include includes/footer.ejs%>
-    </footer><!-- #footer -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main site/distributorForm.js"></script>
+  <footer id="footer">
+    <%include includes/footer.ejs%>
+  </footer><!-- #footer -->
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="js/main site/distributorForm.js"></script>
 </body>
+
 </html>
