--- a/views/distributors/index.ejs
+++ b/views/distributors/index.ejs
@@ -18,10 +18,16 @@
   <%- include partials/loader %>
   <div class="row main">
     <h3 class="center-align">Distributor's Requests</h3>
-    <div class="row">          
-        <div class="col s12" id="distributors-row">
-            <!-- <h3>Products</h3> -->
-        </div>
+    <div class="row">
+      <div class="col s12" id="distributors-row">
+        <!-- <h3>Products</h3> -->
+      </div>
+    </div>
+    <h3 class="center-align">Get In Touch Requests</h3>
+    <div class="row">
+      <div class="col s12" id="getInTouches-row">
+        <!-- <h3>Products</h3> -->
+      </div>
     </div>
     <div class="info"></div>
   </div>
@@ -37,7 +43,7 @@
       <a href="#" class="modal-close waves-effect waves-green btn-flat agree-btn">Agree</a>
     </div>
   </div>
-  
+
   <%- include partials/errors %>
 
   <!--JavaScript at end of body for optimized loading-->
