--- a/views/distributors/one.ejs
+++ b/views/distributors/one.ejs
@@ -9,7 +9,7 @@
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Recipe update page</title>
+  <title>Distributors page</title>
 
   <style>
     table > tbody > tr > td {
@@ -32,7 +32,7 @@
 
   <div class="main container">
     <h3 class="center-align">Details</h3>
-    <table class="striped highlight" style="margin-bottom: 50px;">
+    <table class="striped" style="margin-bottom: 50px;">
       <tbody>
         <tr>
           <td>Name Of Firm</td>
