Full site is responsive now

--- a/public/css/style-contact.css
+++ b/public/css/style-contact.css
@@ -1,5 +1,5 @@
 #contact-form{
-  padding: 0% 0% 0% 20%;
+  padding: 20px;
   background: url("../bg-img/back.jpg") center top no-repeat fixed;
 }
 
